# quetz-sql-authenticator

./: .pre-commit-config.yaml  README.md  environment.yml  setup.cfg  setup.py.old
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: .condarc  ci.yml  pre-commit-autoupdate.yml  tag.yml
conda.recipe/: meta.yaml
docs/: conf.py  index.rst
quetz_sql_authenticator/: api.py
tests/: conftest.py  test_quetz_sql_authenticator.py
