[metadata]
name = quetz_sql_authenticator
description = Manage simple credentials for your Quetz server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantco/quetz-sql-authenticator
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires = # TODO what goes here?
python_requires = >=3.8
packages = find:

[options.entry_points]
quetz =
    quetz_sql_authenticator = quetz_sql_authenticator.main
quetz.migrations =
    quetz_sql_authenticator = quetz_sql_authenticator.migrations
quetz.authenticator =
    sql_authenticator = quetz_sql_authenticator.main:SQLAuthenticator
quetz.models =
    quetz_sql_authenticator = quetz_sql_authenticator.db_models
