[metadata]
name = quetz_sql_authenticator
description = Manage simple credentials for your Quetz server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mamba-org/quetz-sql-authenticator
author = QuantStack & Quetz contributors
author_email = wolf.vollprecht@quantstack.net
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    # TODO do we have to put more in here?
    # Taken from https://github.com/Quantco/gunicorn_fork/blob/c0d05dad3d759f8cbbc465ba4698e1e94ed67cd7/setup.py#L76
    setuptools>=3.0
python_requires = >=3.8
packages = find:

[options.entry_points]
quetz =
    quetz_sql_authenticator = quetz_sql_authenticator.main
quetz.migrations =
    quetz_sql_authenticator = quetz_sql_authenticator.migrations
quetz.authenticator =
    sql_authenticator = quetz_sql_authenticator.main:SQLAuthenticator
quetz.models =
    quetz_sql_authenticator = quetz_sql_authenticator.db_models
